Fix rating stars too small in storyRead

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -895,6 +895,12 @@ nav form input:focus {
 	margin: 0;
 }
 
+#storyDetails #left img {
+	width: 20px;
+	height: 20px;
+	margin: 0 2px;
+}
+
 #storyDetails  #left #linkToChars{
 	cursor: pointer;
 	text-transform: uppercase;
@@ -1127,8 +1133,8 @@ nav form input:focus {
 
 .flexWrap .storyById .storyByIdContent #storyDetails #left #rating span::after {
 	position: absolute;
-	left: -2px;
-	top: 0;
+	left: 0;
+	bottom: 2px;
 	background-color: rgba(0, 0, 0, 0.1);
 	border-radius: 9999px;
 	padding: 2px;
